--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Godsenal/tdd-study#readme",
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
+    "jest": "^26.6.3",
+    "typescript": "^4.2.3"
   }
 }
