--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "custom-test": "nodemon --watch src/ --ext ts --exec \"ts-node src/test/__tests__/test.ts\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
