:sparkles: 예제 실행 이벤트 추가

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --watchAll",
     "tsc": "tsc",
-    "custom-test": "nodemon --watch src/ --ext ts --exec \"ts-node src/test/__tests__/test.ts\""
+    "custom-test": "nodemon --watch src/ --ext ts --exec \"ts-node src/test/__tests__/test.ts\"",
+    "ts-node": "ts-node"
   },
   "repository": {
     "type": "git",
